[project]
name = "openenv-trading-env"
version = "0.1.0"
description = "AI Trading Environment using OpenEnv"
authors = [{name = "Your Name"}]
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "numpy",
    "pydantic",
    "fastapi",
    "uvicorn",
    "openenv>=0.1.13"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entry_point = "env.trading_env:TradingEnv"